Thu May  4 08:50:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        Reverted the change below, broke the sendfile test and Steve
        Huston changed things in such a way that sendfile is only
        used on Solaris 9 and newer

        Tue May  2 09:34:54 Pacific Daylight Time 2006    <ossama_othman at symantec dot com>
        * ace/OS_NS_sys_sendfile.inl (sendfile):
          Removed "::" global scope qualifier from platform sendfile()
          call.  It caused problem on Solaris 8.  Thanks to Simon Massey
          and Johnny Willemsen for analyzing the problem and suggesting
          this fix.

Thu May  4 08:36:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ace_for_tao.mpc:
          Added OS_NS_sys_sendfile

Thu May  4 00:43:32 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/Makefile.am:

          Add Dynamic_Service_Dependency.{cpp,h} to appropriate lists.

Wed May  3 16:02:10 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Config.h:
        * ace/Service_Config.cpp:

          Fixed a problem due to an attempt to access current_ before it
          has been initialized (a static ACE_TSS instance). The current_
          is now just a pointer to an ACE_TSS instance, which gets
          dynamicaly allocated upon invoking the current() method. The
          deallocation of that instance is left up to the Object Manager
          with whoom the dynamic ACE_TSS instance is registered.

        * ace/TSS_T.h:

          Addes a ACE_TSS_SET () to complete the set of TSS access
          operations, which should work regardless of threading, TSS
          emulation and TSS availability.

Wed May  3 11:52:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Mem_Map.inl:
          Small const improvements

Wed May  3 10:39:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Mem_Map.{h,cpp,inl}:
          Made close_handle_ a bool
